upgraded dependencies with vulnerabilities

--- a/P3/backend/serverless.yml
+++ b/P3/backend/serverless.yml
@@ -9,7 +9,7 @@ plugins:
   # - serverless-plugin-canary-deployments
 
 # package:
-#   individually: tru
+#   individually: true
 
 provider:
   name: aws
